fix footer botton gap

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
   height: 100%;
   width: 100%;
   color: white;
+  background-color: #000;
 }
 
 header,
